matched file structure with live version

--- a/dev/index.html
+++ b/dev/index.html
@@ -7,11 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <!-- attach CSS/JS  -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet" /> 
+  <link href="../css/bootstrap.min.css" rel="stylesheet">
+  <link href="../css/style.css" rel="stylesheet" /> 
   <script src="http://code.jquery.com/jquery.js"></script>
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-  <script src="/dev/js/main.js"></script>
+  <script src="../js/main.js"></script>
   <!-- 
   <script src="/dev/js/bootstrap.min.js"></script>
 -->
